# DistributedCodeSearchEngine

./: .gitignore  Dockerfile  GITHUB_UPLOAD.md  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt  setup.py  test_e2e.py  test_key_functions.py  test_search_relevance.py  test_semantic_fix.py  verify_requirements.py
codesearch/: __init__.py  config.py  models.py
codesearch/api/: __init__.py  server.py
codesearch/api/static/: index.html
codesearch/cli/: __init__.py  main.py
codesearch/embeddings/: __init__.py  generator.py
codesearch/gui/: __init__.py  gradio_app.py
codesearch/indexer/: __init__.py  repo_indexer.py
codesearch/parser/: __init__.py  base.py  factory.py  go_parser.py  javascript_parser.py  python_parser.py  rust_parser.py
codesearch/queue/: __init__.py  publisher.py  worker.py
codesearch/search/: __init__.py  engine.py
codesearch/storage/: __init__.py  bm25_index.py  vector_store.py
tests/: __init__.py  test_parser.py  test_search.py
